Fix precipitation graph colors under dark mode

--- a/css/wx.css
+++ b/css/wx.css
@@ -118,12 +118,8 @@ body.dark-mode {
     cursor: pointer;
 }
 
-/* #wx-data {
-    max-width: 960px;
-} */
-
 #minutely-precip-container {
-    width: auto;
+    max-width: 1100px;
     display: flex;
     justify-content: center;
 }
